--- a/index-c4c.html
+++ b/index-c4c.html
@@ -15,14 +15,14 @@
     </head>
     <body>
         <!-- HEADER -->
-        <header class="top">
+        <header class="container top">
             <a href="index-c4c.html">
                 <h1 class="logo">Crazy4Coffee</h1>
             </a>
-            <button class="btn-menu">
+            <button class="btn-menu bg-gradient">
                 <i class="fa fa-bars fa-lg"></i>
             </button>
-            <nav class="menu">
+            <nav class="container menu">
                 <a class="btn-close"><i class="fa fa-times"></i></a>
                 <ul>
                     <li><a href="index-c4c.html">Home</a></li>
@@ -34,28 +34,27 @@
             </nav>
         </header>
         <!-- BANNER -->
-        <div class="banner">
+        <div class="container banner bg-gradient">
             <div class="title">
                 <h2>DO YOU LOVE COFFEE?</h2>
                 <h3>This is the ideal place for you to learn more about the best drink in the world.</h3>
             </div>
-            <div class="-banner-buttons">
-                <div class="btn btn-register">Register<i class="fa fa-arrow-circle-right"></i></div>
-                <div class="btn btn-about">About<i class="fa fa-question-circle"></i></div>
+            <div class="banner-buttons">
+                <div class="btn btn-register bg-white">Register<i class="bg-white fa fa-arrow-circle-right"></i></div>
+                <div class="btn btn-about bg-black">About<i class="bg-black fa fa-question-circle"></i></div>
             </div>
         </div>
-        <!-- ARTS -->
-        <main class="matter">
-            <article class="coffee-article">
+        <!-- ARTICLES -->
+        <main class="container matter">
+            <article class="coffee-article bg-white">
                 <a href="#"><img src="img/drinks.jpg" alt="Coffee Drinks"></a>
                 <div class="inner">
                     <a href="#">Coffee Drinks</a>
                     <h4>Delicious combinations</h4>
-                    <p>While all coffee drinks are based on either coffee or espresso, some drinks add milk or cream, some are made with
-                    steamed milk or non-dairy milks, or some beverages add water. There are many variations to the basic coffee or espresso bases.</p>
+                    <p>While all coffee drinks are based on either coffee or espresso, some drinks add milk or cream. There are many variations to the basic coffee or espresso bases.</p>
                 </div>
             </article>
-            <article class="coffee-article">
+            <article class="coffee-article bg-white">
                 <a href="#"><img src="img/processing.jpg" alt="Processing"></a>
                 <div class="inner">
                     <a href="#">Processing</a>
@@ -63,13 +62,13 @@
                     <p>Coffee berries and their seeds undergo several processes before they become the familiar roasted coffee. Let's get to know the process step by step.</p>
                 </div>
             </article>
-            <article class="coffee-article">
+            <article class="coffee-article bg-white">
                 <a href="#"><img src="img/sustainable.jpg" alt="Sustainable"></a>
                 <div class="inner">
                     <a href="#">Sustainable</a>
                     <h4>Grown and marketed for its sustainability</h4>
-                    <p>This term has entered the lexicon and this segment has quickly grown into a multibillion-dollar industry of its own with
-                    potentially implications for other commodities as demand and awareness expand.</p>
+                    <p>This segment has quickly grown into a multibillion-dollar industry of its own with potentially implications for other
+                    commodities as demand and awareness expand.</p>
                 </div>
             </article>
         </main>
@@ -82,7 +81,22 @@
                 <button class="bg-white radius"> Register </button>
             </form>
         </section>
+        <!-- FOOTER -->
+        <footer class="footer">
+            <footer class="footer container bg-gradient">
+                <div class="social-icons">
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-google"></i></a>
+                    <a href="#"><i class="fa fa-instagram"></i></a>
+                    <a href="#"><i class="fa fa-envelope"></i></a>
+                </div>
+                <p class="copyright">
+                    Copyright © Crazy4Coffe 2020. All rights reserved.
+            </footer>
+        </footer>
 
+        <!-- JQUERY -->
         <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>
             $(".btn-menu").click(function(){
